--- a/README.adoc
+++ b/README.adoc
@@ -1,1 +1,5 @@
 = Gateway
+
+image:http://build.gravitee.io/jenkins/buildStatus/icon?job=gravitee-gateway["Build status", link="http://build.gravitee.io/jenkins/job/gravitee-gateway/"]
+
+image:https://img.shields.io/maven-central/v/io.gravitee.gateway/gravitee-gateway.svg["Maven Central", link="http://search.maven.org/#search%7Cga%7C1%7Cg%3A%22io.gravitee.gateway%22%20AND%20a%3A%22gravitee-gateway%22"]
