--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,6 @@
 = Gateway
 
-image:http://build.gravitee.io/jenkins/buildStatus/icon?job=gravitee-gateway["Build status", link="http://build.gravitee.io/jenkins/job/gravitee-gateway/"]
-
-image:https://img.shields.io/maven-central/v/io.gravitee.gateway/gravitee-gateway.svg["Maven Central", link="http://search.maven.org/#search%7Cga%7C1%7Cg%3A%22io.gravitee.gateway%22%20AND%20a%3A%22gravitee-gateway%22"]
+ifdef::env-github[]
+image:https://ci.gravitee.io/buildStatus/icon?job=gravitee-io/gravitee-gateway/master["Build status", link="https://ci.gravitee.io/job/gravitee-io/job/gravitee-gateway"]
+image:https://badges.gitter.im/Join Chat.svg["Gitter", link="https://gitter.im/gravitee-io/gravitee-io?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge&utm_content=badge"]
+endif::[]
