--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,8 @@
 = Gravitee Management REST API
 
-Administrative Rest API to manage the Gateway
+ifdef::env-github[]
+image:https://ci.gravitee.io/buildStatus/icon?job=gravitee-io/gravitee-management-rest-api/master["Build status", link="https://ci.gravitee.io/job/gravitee-io/job/gravitee-management-rest-api/"]
+image:https://badges.gitter.im/Join Chat.svg["Gitter", link="https://gitter.im/gravitee-io/gravitee-io?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge&utm_content=badge"]
+endif::[]
 
-image:http://build.gravitee.io/jenkins/buildStatus/icon?job=gravitee-management-rest-api["Build status", link="http://build.gravitee.io/jenkins/job/gravitee-management-rest-api/"]
+Administrative Rest API to manage the Gateway
