--- a/CONTRIBUTING.adoc
+++ b/CONTRIBUTING.adoc
@@ -1,24 +1,24 @@
 = Contributing to Gravitee.io
 
-You think Gravitee.io is awesome and want to contribute to the project ?
-Here are few guidlines that should help you get started.
+You think Gravitee.io is awesome and want to contribute to the project?
+Here are few guidelines that should help you get started.
 
 == Using GitHub issues
 
-We use GitHub issues to track bugs and enhancements. You find a bug in the source code ? You want to propose new features or enhancements  You can help us by submitting an issue in our https://github.com/gravitee-io/gravitee-management-webui[repository]. Before you submit your issue, search the https://github.com/gravitee-io/gravitee-management-webui/issues[issues archive] or the https://waffle.io/gravitee-io/release[backlog]; maybe your question was already answered.
+We use GitHub issues to track bugs and enhancements. Found a bug in the source code? You want to propose new features or enhancements  You can help us by submitting an issue in our https://github.com/gravitee-io/gravitee-management-webui[repository]. Before you submit your issue, search the https://github.com/gravitee-io/issues/issues[issues archive] or the https://waffle.io/gravitee-io/release[backlog]; maybe your question was already answered.
 
-> Issues are only to report bugs, request enhancements, or request new features. For general questions and discussions, use the https://groups.google.com/forum/#!forum/graviteeio[Gravitee.io Forum].
+> Issues are only to report bugs, request enhancements, or request new features. For general questions and discussions, use the https://gitter.im/gravitee-io/gravitee-io[Gravitee.io Gitter chat].
 
 Providing the following information will help us to deal quickly with your issue :
 
-* **Overview of the issue** : describe the issue and why this is a bug for you. 
-* **Gravitee.io version(s)** : possible regression ?
-* **Browsers and Operating System** : Linux/Windows/Docker ? Browser version for the UI, etc ...
-* **You have stack trace, screenshots, logs ?** add these to the issue's description.
+* **Overview of the issue** : describe the issue and why this is a bug for you.
+* **Gravitee.io version(s)** : possible regression?
+* **Browsers and Operating System** : Linux/Windows/Docker? Browser version for the UI, etc ...
+* **You have stack trace, screenshots, logs?** add these to the issue's description.
 
 == Submitting changes
 
-You've submitted an issue to the project and know how to fix it ? You can contribute to the project by https://guides.github.com/activities/forking/[forking the repository] and https://guides.github.com/activities/forking/#making-a-pull-request[submitting your pull requests].
+You've submitted an issue to the project and know how to fix it? You can contribute to the project?by https://guides.github.com/activities/forking/[forking the repository] and https://guides.github.com/activities/forking/#making-a-pull-request[submitting your pull requests].
 
 Before you submit your pull request consider the following guidelines:
 
@@ -65,6 +65,10 @@ git push origin issue/#<issue-id>-my-fix-branch -f
 ```
 
 And That's it! You've just contributed to the project and we really appreciate it ! You can still find help, news and information on our https://groups.google.com/forum/#!forum/graviteeio[forum].
+
+== Contributor License Agreement
+
+Please sign our https://download.gravitee.io/cla.pdf[Contributor License Agreement (CLA)] and send it to contact@graviteesource.com. For any code changes to be accepted, the CLA must be signed.
 
 == Further Information
 
