--- a/release/README.adoc
+++ b/release/README.adoc
@@ -27,7 +27,7 @@ zx -v
 ----
 * A https://github.com/motdotla/dotenv#readme[dotenv] file containing the variable `CIRCLECI_TOKEN`, which is your personal token on CircleCI. (https://circleci.com/docs/2.0/managing-api-tokens#creating-a-personal-api-token[How to create your CircleCI personal token ?])
 
-== 🏁 Usage
+== 🏁 Usage[[Usage]]
 
 Thanks to link:package.json[package.json], you can run those scripts as simple `npm` commands (do not forget to use `npm i` before starting).
 
@@ -40,8 +40,10 @@ Optional flag:
 
 * `--dry-run`: allow to run the pipeline in dry run mode (except for `nexus_sync` which does not have this mode)
 
-Each commands, when successful, will guide you to the next command to run, for example: `When it's done, run 'npm run nexus_sync -- --version=3.15.11'
-`.
+Each commands, when successful, will guide you to the next command to run, for example:
+```
+When it's done, run 'npm run nexus_sync -- --version=3.15.11'
+```
 
 Here are the steps to run to fully release APIM (Releasing 3.15.11, in the following example):
 
@@ -50,3 +52,18 @@ Here are the steps to run to fully release APIM (Releasing 3.15.11, in the follo
 3. `npm run docker_rpms -- --version=3.15.11`: You can also provide the `--latest` parameter to flag the image as `latest`.
 4. `npm run changelog -- --version=3.15.11`
 5. `npm run nexus_sync -- --version=3.15.11`
+
+== 🧪 Handle pre-version releases
+
+To create a pre-version release (like `alpha`, `beta`, RC`, `GA`, ...), you just have to change the `<sha1/>` tag in `pom.xml` file. +
+This tag MUST be of the form: `-NAME.VERSION` (e.g. `-alpha.1`, `-RC.3`, ...)
+
+```xml
+    <!-- Version properties -->
+    <revision>3.20.0</revision>
+    <sha1>-alpha.1</sha1>
+    <changelist>-SNAPSHOT</changelist>
+```
+
+Then, follow instructions of <<Usage>> with `--version=3.20.0-alpha.1`. +
+The version of the modifier will be automatically increased. (`3.20.0-alpha.2` in the example above).
