--- a/release/changelog/CHANGELOG-v3.adoc
+++ b/release/changelog/CHANGELOG-v3.adoc
@@ -12,8 +12,8 @@ For upgrade instructions, please refer to https://docs.gravitee.io/apim/3.x/apim
 *_General_*
 
 - Avoid to evict subscription when we close it and accept a new one https://github.com/gravitee-io/issues/issues/8637[#8637]
-
- 
+- Merge 3.18.13 into 3.19.x https://github.com/gravitee-io/issues/issues/8682[#8682]
+  
  
 
 == https://github.com/gravitee-io/issues/milestone/615?closed=1[APIM - 3.18.13 (2022-11-25)]
