docs: add more documentation about the release process

--- a/README.adoc
+++ b/README.adoc
@@ -22,3 +22,8 @@ Gravitee.io API Management is a flexible, lightweight and blazing-fast Open Sour
 == Documentation
 
 You can find Gravitee.io API Management's documentation on https://docs.gravitee.io/[Gravitee.io website].
+
+
+== Release
+
+Ready to release a new version of Gravitee.io API Management? Follow the dedicated link:release/README.adoc[documentation].
