--- a/release/README.adoc
+++ b/release/README.adoc
@@ -1,5 +1,14 @@
 = Release process
 
+*You don't want to run all the steps on your local machine?*
+
+Then you can use GitHub Codespaces to run the release scripts.
+To do so, you need to visit the GitHub repository, switch branch to the one you want to release and create a new Codespace:
+
+image::media/codespace-example.png[How to create a Codespace]
+
+Doing so, you will have a new Codespace with the repository already cloned, the branch you want to release checked out, and Node already installed.
+
 == 📝 Description
 
 This repo contains some https://github.com/google/zx[zx] scripts to execute the different release steps for APIM.
@@ -16,12 +25,12 @@ It will allow you to run these pipeline on CircleCI:
 
 To run the scripts, you need to have:
 
-* Node.js >= 16.0.0 (configured in link:.nvmrc[.nvmrc] with v18.4.0)
-* https://github.com/google/zx[zx], to install it you just have to run:
+* Node.js >= 16.0.0
+* https://github.com/google/zx[zx], to install it you just have to open a terminal and run:
 
 [source,shell]
 ----
-npm i -g zx
+npm install -g zx
 # Check everything is ok:
 zx -v
 ----
@@ -37,11 +46,24 @@ touch .env && echo "CIRCLECI_TOKEN=[YOUR_TOKEN]" > .env
 * Some dependencies to run the scripts, you can install them with:
 [source, shell]
 ----
-# In the `release` folder
+# Go inside the release folder
+cd release
+# Install the dependencies
 npm install
 ----
 
 == 🏁 Usage
+
+=== 🚀 TL;DR
+
+To run the release scripts, you need to run the following command:
+
+[source, shell]
+----
+npm run release -- --version=[VERSION_TO_RELEASE]  ------------- FIXME: To update with the real name -----------------
+----
+
+=== 📝 Detailed process
 
 Thanks to link:package.json[package.json], you can run those scripts as simple `npm` commands (do not forget to use `npm i` before starting).
 
@@ -59,7 +81,7 @@ Each commands, when successful, will guide you to the next command to run, for e
 
 Here are the steps to run to fully release APIM (Releasing 3.15.11, in the following example):
 
-1. `npm run release -- --version=3.15.11`
+1. `npm run release_apim -- --version=3.15.11` ------------- FIXME: To update with the real name -----------------
 2. `npm run package_zip -- --version=3.15.11`:
 3. `npm run docker_rpms -- --version=3.15.11`: You can also provide the `--latest` parameter to flag the image as `latest`.
 4. `npm run changelog -- --version=3.15.11`
