--- a/release/README.adoc
+++ b/release/README.adoc
@@ -56,16 +56,16 @@ Optional flag:
 
 Each commands, when successful, will guide you to the next command to run, for example:
 ```
-When it's done, run 'npm run nexus_sync -- --version=3.15.11'
+When it's done, run 'npm run nexus_sync -- --version=3.19.8'
 ```
 
-Here are the steps to run to fully release APIM (Releasing 3.15.11, in the following example):
+Here are the steps to run to fully release APIM (Releasing 3.19.8, in the following example):
 
-1. `npm run release -- --version=3.15.11`
-2. `npm run package_zip -- --version=3.15.11`:
-3. `npm run docker_rpms -- --version=3.15.11`: You can also provide the `--latest` parameter to flag the image as `latest`.
-4. `npm run changelog -- --version=3.15.11`
-5. `npm run nexus_sync -- --version=3.15.11`
+1. `npm run release -- --version=3.19.8`
+2. `npm run package_zip -- --version=3.19.8`:
+3. `npm run docker_rpms -- --version=3.19.8`: You can also provide the `--latest` parameter to flag the image as `latest`.
+4. `npm run release_notes -- --version=3.19.8`
+5. `npm run nexus_sync -- --version=3.19.8`
 
 == 🧪 Handle pre-version releases
 
